test/spec_vectors/unreached-invalid/fail/module_2.wat
(module (func $func-index (unreachable) (call 1)))